# tiny-rag

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
data/: qa_pairs.json
scripts/: make_viz.py
src/: corpus.py  eval.py  pipeline.py  qa.py  retriever.py
tests/: test_corpus.py  test_eval.py  test_retriever.py
